--- a/WISLEY/Views/Masters/sidebar.master
+++ b/WISLEY/Views/Masters/sidebar.master
@@ -69,7 +69,12 @@
 
 
                 <div class="col-12 justify-content-center">
-                    <a id="createGroupBtn" class="btn btn-block btn-success text-left rounded-0 mb-1 invisible text-center" href="<%= Page.ResolveUrl("~/Views/Group/createGroup.aspx") %>"><i class="fas fa-plus"></i>&nbsp;&nbsp;  Create Group </a>
+                    <a id="createGroupBtn" class="btn btn-block btn-white text-left rounded-0 mb-1 text-center" href="<%= Page.ResolveUrl("~/Views/Group/joinGroup.aspx") %>"><i class="fas fa-plus"></i>&nbsp;&nbsp;  Join Group </a>
+                        <% if (TeacherCheck())
+                            {
+                        %>
+                    <a id="createGroupBtn" class="btn btn-block btn-success text-left rounded-0 mb-1 text-center" href="<%= Page.ResolveUrl("~/Views/Group/createGroup.aspx") %>"><i class="fas fa-plus"></i>&nbsp;&nbsp;  Create Group </a>
+                        <% } %>
                 </div>
             </div>
 
@@ -94,14 +99,9 @@
         </div>
     </div>
 
-    <% if (TeacherCheck())
-        {
-    %>
-    <script>
-        console.log("Teacher acc")
-        $("#createGroupBtn").removeClass("invisible")
-    </script>
-    <% } %>
+
+
+
 
     <script type="text/javascript">
         <% string username = user().name; %>
