--- a/WISLEY/Views/Masters/sidebar.master
+++ b/WISLEY/Views/Masters/sidebar.master
@@ -32,7 +32,7 @@
 
 
                 <div class="col-12">
-                    <h4 class="text-center mx-auto">Modules</h4>
+                    <h4 class="text-center mx-auto">Groups</h4>
                     <hr class="hr-primary">
                     <%if (true)
                         {%>
