--- a/WISLEY/Views/Masters/group.Master
+++ b/WISLEY/Views/Masters/group.Master
@@ -1,18 +1,19 @@
 ﻿<%@ Master Language="C#" MasterPageFile="sidebar.Master" AutoEventWireup="true" CodeBehind="sidebar.master.cs" Inherits="WISLEY.NestedMasterPage1" %>
 
 <asp:Content ID="Content3" ContentPlaceHolderID="sidebarContent" runat="server">
-     <% string pageName = getPageName(); %>
+    <% string pageName = getPageName(); %>
 
-     <% if (Request.QueryString["groupId"] != null)
-     {
-        string grpName = getGroupDetails().name;
-        string grpDesc = getGroupDetails().description;
-        string grpCode = getGroupDetails().joinCode;
-        string grpId = getGroupDetails().id.ToString();
-     %>
+    <% if (Request.QueryString["groupId"] != null)
+        {
+            string grpName = getGroupDetails().name;
+            string grpDesc = getGroupDetails().description;
+            string grpCode = getGroupDetails().joinCode;
+            string grpId = getGroupDetails().id.ToString();
+    %>
 
     <div class="card card-body rounded-top mb-3">
-        <% if(user().userType == "Teacher") { %>
+        <% if (user().userType == "Teacher")
+            { %>
         <div class="row justify-content-end">
             <a href="<%=Page.ResolveUrl("~/Views/Group/editGroup.aspx?groupId=" + Request.QueryString["groupId"]) %>"><i class="fas fa-edit fa-lg text-primary mr-2"></i></a>
         </div>
@@ -26,106 +27,117 @@
             <p class="text-left col-12">
                 <%= grpDesc %>
             </p>
-            <% if(user().userType == "Teacher") { %>
+            <% if (user().userType == "Teacher")
+                { %>
             <p class="text-left col-12">
                 Invite code: <span class="group-code black-text black"><%= grpCode %></span>
-                <small> </small>
+                <small></small>
             </p>
             <% } %>
-
-     
         </div>
 
-    
-        </div>
+
+    </div>
 
     <div class="card card-body border border-primary rounded p-0">
 
-    <ul class="nav nav-tabs border-bottom-0 white" id="myClassicTabShadow" role="tablist">
+        <ul class="nav nav-tabs border-bottom-0 white" id="myClassicTabShadow" role="tablist">
 
-        <li class="nav-item <% if(pageName == "collab") {%>  waves-light active show <% } %>" id="postTab">
-            <a class="nav-link <% if(pageName == "collab") {%>  waves-light active show <% } %>" id="posts-tab-classic-shadow" data-toggle="tab"
-                href="#posts-classic-shadow" role="tab" aria-controls="posts-classic-shadow"
-                aria-selected="true">Posts</a>
-        </li>
+            <li class="nav-item <% if (pageName == "collab")
+                {%>  waves-light active show <% } %>" id="postTab">
+                <a class="nav-link <% if (pageName == "collab")
+                    {%>  waves-light active show <% } %>" id="posts-tab-classic-shadow" data-toggle="tab"
+                    href="#posts-classic-shadow" role="tab" aria-controls="posts-classic-shadow"
+                    aria-selected="true">Posts</a>
+            </li>
 
-        <li class="nav-item">
-            <a class="nav-link" id="resources-tab-classic-shadow" data-toggle="tab"
-                href="#resources-classic-shadow" role="tab" aria-controls="resources-classic-shadow"
-                aria-selected="true">Resources</a>
-        </li>
+            <li class="nav-item <% if (pageName == "viewResources")
+                {%>  waves-light active show <% } %>">
+                <a class="nav-link" id="resourceTab" data-toggle="tab"
+                    href="<%= Page.ResolveUrl("~/Views/Resources/viewResources.aspx?groupId="+ grpId) %>"
+                    role="tab" aria-controls="resources-classic-shadow"
+                    aria-selected="true">Resources</a>
+            </li>
 
-        <li class="nav-item">
-            <a class="nav-link" id="assignments-tab-classic-shadow" data-toggle="tab"
-                href="#assignments-classic-shadow" role="tab" aria-controls="assignments-classic-shadow"
-                aria-selected="true">Assignments</a>
+            <li class="nav-item">
+                <a class="nav-link" id="assignments-tab-classic-shadow" data-toggle="tab"
+                    href="#assignments-classic-shadow" role="tab" aria-controls="assignments-classic-shadow"
+                    aria-selected="true">Assignments</a>
 
-        <li class="nav-item <% if(pageName == "members") {%>  waves-light active show <% } %>" id="memberTab">
-            <a class="nav-link" id="members-tab-classic-shadow" data-toggle="tab"
-          
-                href="<%= Page.ResolveUrl("~/Views/Group/members.aspx?groupId="+ grpId) %>" 
-                
-                role="tab" aria-controls="members-classic-shadow"
-                aria-selected="true">Members</a>
-        </li>
-    </ul>
-
-     
-
-    <div class="tab-content min-vh-80" id="myClassicTabContentShadow">
-        <div class="tab-pane fade <% if(pageName == "collab") {%> active show <% } %>" id="posts-classic-shadow" role="tabpanel"
-            aria-labelledby="posts-tab-classic-shadow">
-            <div>
-    <% } %>
+            <li class="nav-item <% if (pageName == "members")
+                {%>  waves-light active show <% } %>" id="memberTab">
+                <a class="nav-link" id="members-tab-classic-shadow" data-toggle="tab"
+                    href="<%= Page.ResolveUrl("~/Views/Group/members.aspx?groupId="+ grpId) %>"
+                    role="tab" aria-controls="members-classic-shadow"
+                    aria-selected="true">Members</a>
+            </li>
+        </ul>
 
 
-                <asp:ContentPlaceHolder ID="groupPosts" runat="server">
-                </asp:ContentPlaceHolder>
 
-             <% if (Request.QueryString["groupId"] != null){%>                        
+        <div class="tab-content min-vh-80" id="myClassicTabContentShadow">
+            <div class="tab-pane fade <% if (pageName == "collab")
+                {%> active show <% } %>" id="posts-classic-shadow" role="tabpanel"
+                aria-labelledby="posts-tab-classic-shadow">
+                <div>
+                    <% } %>
+
+
+                    <asp:ContentPlaceHolder ID="groupPosts" runat="server">
+                    </asp:ContentPlaceHolder>
+
+                    <% if (Request.QueryString["groupId"] != null)
+                        {%>
+                </div>
+
             </div>
 
-        </div>
-
-        <div class="tab-pane fade" id="resources-classic-shadow" role="tabpanel"
-            aria-labelledby="resources-tab-classic-shadow">
+            <div class="tab-pane fade <% if (pageName == "viewResources")
+                {%> active show <% } %>" id="resources-classic-shadow" role="tabpanel"
+                aria-labelledby="resources-tab-classic-shadow">
 
                 <asp:ContentPlaceHolder ID="groupResources" runat="server">
                 </asp:ContentPlaceHolder>
 
-        </div>
+            </div>
 
-        <div class="tab-pane fade" id="assignments-classic-shadow" role="tabpanel"
-            aria-labelledby="assignments-tab-classic-shadow">
+            <div class="tab-pane fade" id="assignments-classic-shadow" role="tabpanel"
+                aria-labelledby="assignments-tab-classic-shadow">
 
                 <asp:ContentPlaceHolder ID="groupAssignments" runat="server">
                 </asp:ContentPlaceHolder>
 
-        </div>
+            </div>
 
-        <div class="tab-pane fade <% if(pageName == "members") {%> active show <% } %>" id="members-classic-shadow" role="tabpanel"
-            aria-labelledby="members-tab-classic-shadow">
+            <div class="tab-pane fade <% if (pageName == "members")
+                {%> active show <% } %>" id="members-classic-shadow" role="tabpanel"
+                aria-labelledby="members-tab-classic-shadow">
 
                 <asp:ContentPlaceHolder ID="groupMembers" runat="server">
                 </asp:ContentPlaceHolder>
 
+            </div>
         </div>
     </div>
-        </div>
 
     <% } %>
-         <% if (Request.QueryString["groupId"] != null)
-     { %>
+    <% if (Request.QueryString["groupId"] != null)
+        { %>
     <script>
         $("#memberTab").click(function () {
             console.log("clicked")
-            window.location.replace("<%= Page.ResolveUrl("~/Views/Group/members.aspx?groupId="+getGroupDetails().id.ToString()) %>" )
+            window.location.replace("<%= Page.ResolveUrl("~/Views/Group/members.aspx?groupId="+getGroupDetails().id.ToString()) %>")
         })
 
         $("#postTab").click(function () {
             console.log("clicked")
-            window.location.replace("<%= Page.ResolveUrl("~/Views/Board/collab.aspx?groupId="+getGroupDetails().id.ToString()) %>" )
+            window.location.replace("<%= Page.ResolveUrl("~/Views/Board/collab.aspx?groupId="+getGroupDetails().id.ToString()) %>")
+        })
+
+        $("#resourceTab").click(function () {
+            console.log("clicked")
+            window.location.replace("<%= Page.ResolveUrl("~/Views/Resources/viewResources.aspx?groupId="+getGroupDetails().id.ToString()) %>")
         })
     </script>
-      <% } %>
+    <% } %>
 </asp:Content>
