--- a/WISLEY/Views/Masters/group.Master
+++ b/WISLEY/Views/Masters/group.Master
@@ -27,16 +27,25 @@
             <p class="text-left col-12">
                 <%= grpDesc %>
             </p>
-            <% if (user().userType == "Teacher")
-                { %>
-            <p class="text-left col-12">
+        </div>
+
+        <% if (user().userType == "Teacher")
+            { %>
+        <div class="row justify-content-start">
+
+            <p class="text-left col-3 my-auto">
                 Invite code: <span class="group-code black-text black"><%= grpCode %></span>
                 <small></small>
             </p>
-            <% } %>
+
+            <div class="col-6">
+                <asp:Button ID="grpCodeReset" Text="Reset Group Code"
+                    class="btn btn-sm btn-primary"
+                    runat="server" OnClick="resetGroupCode" />
+            </div>
+
         </div>
-
-
+        <% } %>
     </div>
 
     <div class="card card-body border border-primary rounded p-0">
@@ -44,9 +53,11 @@
         <ul class="nav nav-tabs border-bottom-0 white" id="myClassicTabShadow" role="tablist">
 
             <li class="nav-item <% if (pageName == "collab")
-                {%>  waves-light active show <% } %>" id="postTab">
+                {%>  waves-light active show <% } %>"
+                id="postTab">
                 <a class="nav-link <% if (pageName == "collab")
-                    {%>  waves-light active show <% } %>" id="posts-tab-classic-shadow" data-toggle="tab"
+                    {%>  waves-light active show <% } %>"
+                    id="posts-tab-classic-shadow" data-toggle="tab"
                     href="#posts-classic-shadow" role="tab" aria-controls="posts-classic-shadow"
                     aria-selected="true">Posts</a>
             </li>
@@ -65,7 +76,8 @@
                     aria-selected="true">Assignments</a>
 
             <li class="nav-item <% if (pageName == "members")
-                {%>  waves-light active show <% } %>" id="memberTab">
+                {%>  waves-light active show <% } %>"
+                id="memberTab">
                 <a class="nav-link" id="members-tab-classic-shadow" data-toggle="tab"
                     href="<%= Page.ResolveUrl("~/Views/Group/members.aspx?groupId="+ grpId) %>"
                     role="tab" aria-controls="members-classic-shadow"
@@ -77,7 +89,8 @@
 
         <div class="tab-content min-vh-80" id="myClassicTabContentShadow">
             <div class="tab-pane fade <% if (pageName == "collab")
-                {%> active show <% } %>" id="posts-classic-shadow" role="tabpanel"
+                {%> active show <% } %>"
+                id="posts-classic-shadow" role="tabpanel"
                 aria-labelledby="posts-tab-classic-shadow">
                 <div>
                     <% } %>
@@ -93,7 +106,8 @@
             </div>
 
             <div class="tab-pane fade <% if (pageName == "viewResources")
-                {%> active show <% } %>" id="resources-classic-shadow" role="tabpanel"
+                {%> active show <% } %>"
+                id="resources-classic-shadow" role="tabpanel"
                 aria-labelledby="resources-tab-classic-shadow">
 
                 <asp:ContentPlaceHolder ID="groupResources" runat="server">
@@ -110,7 +124,8 @@
             </div>
 
             <div class="tab-pane fade <% if (pageName == "members")
-                {%> active show <% } %>" id="members-classic-shadow" role="tabpanel"
+                {%> active show <% } %>"
+                id="members-classic-shadow" role="tabpanel"
                 aria-labelledby="members-tab-classic-shadow">
 
                 <asp:ContentPlaceHolder ID="groupMembers" runat="server">
