--- a/WISLEY/Views/Masters/navbar.Master
+++ b/WISLEY/Views/Masters/navbar.Master
@@ -64,6 +64,9 @@
                 <li class="nav-item">
                     <a class="nav-link rounded" href="<%= Page.ResolveUrl("~/Views/Gacha/gacha.aspx") %>">Gachas</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link rounded" href="<%= Page.ResolveUrl("~/Views/Quiztool/quizzes.aspx") %>">Quizzes</a>
+                </li>
                 <%} %>
             </ul>
             <ul class="navbar-nav ml-auto">
@@ -76,7 +79,7 @@
                 <li class="nav-item dropdown my-auto d-none d-md-block">
                     <a class="nav-link dropdown-toggle m-0 z-depth-1-half" id="profileDD" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
-                        <img class="deep-purple lighten-5 z-depth-0 rounded-circle" height="35" src="https://picsum.photos/100">
+                        <img class="deep-purple lighten-5 z-depth-0 rounded-circle" height="35" src='<%=user().profilesrc %>' onerror="this.src='<%=Page.ResolveUrl("~/Public/img/default.jpg") %>'">
                         <i class="fas fa-user animated faster"></i>
                     </a>
                     <div class="dropdown-menu dropdown-primary dropdown-menu-right mt-1" aria-labelledby="profileDD">
