--- a/WISLEY/Views/Masters/navbar.Master
+++ b/WISLEY/Views/Masters/navbar.Master
@@ -72,7 +72,10 @@
             <ul class="navbar-nav ml-auto">
                 <%if (user() != null)
                     { %>
-                <li class="nav-item mr-2 d-none d-md-block">
+                <li class="nav-item mr-2 mt-3">
+                    <p class="white-text"><%=user().points %> WIS</p>
+                </li>
+                <li class="nav-item mr-2 mt-2 d-none d-md-block">
                     <a class="nav-link rounded" href="#">
                         <i class="fas fa-bell"></i></a>
                 </li>
