--- a/WISLEY/Views/Masters/navbar.Master
+++ b/WISLEY/Views/Masters/navbar.Master
@@ -76,7 +76,7 @@
                     <p class="white-text"><%=user().points %> WIS</p>
                 </li>
                 <li class="nav-item mr-2 mt-2 d-none d-md-block">
-                    <a class="nav-link rounded" href="#">
+                    <a class="nav-link rounded" href="<%=Page.ResolveUrl("~/Views/Notification/viewnotif.aspx") %>">
                         <i class="fas fa-bell"></i></a>
                 </li>
                 <li class="nav-item dropdown my-auto d-none d-md-block">
