--- a/WISLEY/Views/Masters/navbar.Master
+++ b/WISLEY/Views/Masters/navbar.Master
@@ -77,7 +77,7 @@
                 </li>
                 <li class="nav-item mr-2 mt-2 d-none d-md-block">
                     <a class="nav-link rounded" href="<%=Page.ResolveUrl("~/Views/Notification/viewnotif.aspx") %>">
-                        <i class="fas fa-bell"></i></a>
+                        <i class="fas fa-bell"></i><span><%=notifnum() %></span></a>
                 </li>
                 <li class="nav-item dropdown my-auto d-none d-md-block">
                     <a class="nav-link dropdown-toggle m-0 z-depth-1-half" id="profileDD" data-toggle="dropdown" aria-haspopup="true"
