View All Groups
Things done
- Reordering
- Showing Groups
- Hiding Groups

--- a/WISLEY/Views/Masters/sidebar.master
+++ b/WISLEY/Views/Masters/sidebar.master
@@ -75,7 +75,7 @@
 
                     <asp:SqlDataSource ID="groupData"
                         ConnectionString="<%$ connectionStrings: ConnStr%>"
-                        runat="server"></asp:SqlDataSource>
+                        runat="server"/>
 
 
 
