--- a/WISLEY/Public/css/style.css
+++ b/WISLEY/Public/css/style.css
@@ -98,6 +98,7 @@
 }
 
 
+
 /*==============================================================================================================================*/  
 
 
@@ -177,14 +178,87 @@
     max-height: 5vh !important;
 }
 
-
-
-
-
 /*==============================================================================================================================*/
 
 
+.vh-95 {
+    height: 95vh !important;
+}
 
+.vh-90 {
+    height: 90vh !important;
+}
+
+.vh-85 {
+    height: 85vh !important;
+}
+
+.vh-80 {
+    height: 80vh !important;
+}
+
+.vh-75 {
+    height: 75vh !important;
+}
+
+.vh-70 {
+    height: 70vh !important;
+}
+
+.vh-65 {
+    height: 65vh !important;
+}
+
+.vh-60 {
+    height: 60vh !important;
+}
+
+.vh-55 {
+    height: 55vh !important;
+}
+
+.vh-50 {
+    height: 50vh !important;
+}
+
+.vh-45 {
+    height: 45vh !important;
+}
+
+.vh-40 {
+    height: 40vh !important;
+}
+
+.vh-35 {
+    height: 35vh !important;
+}
+
+.vh-30 {
+    height: 30vh !important;
+}
+
+.vh-25 {
+    height: 25vh !important;
+}
+
+.vh-20 {
+    height: 20vh !important;
+}
+
+.vh-15 {
+    height: 15vh !important;
+}
+
+.vh-10 {
+    height: 10vh !important;
+}
+
+.vh-5 {
+    height: 5vh !important;
+}
+
+
+/*==============================================================================================================================*/
 
 
 
@@ -248,4 +322,8 @@
 .no-list-decor li {
     list-style: none;
     border: 1px solid groove;
+}
+
+.text-unset {
+    text-transform: none !important;
 }
