--- a/WISLEY/Public/css/mdb.css
+++ b/WISLEY/Public/css/mdb.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 
 /*!
  * Material Design for Bootstrap 4
@@ -12645,3 +12645,5 @@ ul.stepper li.completed a .label {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg)
 }
+
+
