--- a/WISLEY/Views/Masters/navbar.Master
+++ b/WISLEY/Views/Masters/navbar.Master
@@ -7,15 +7,15 @@
 <head runat="server">
     <title>WISLEY</title>
 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
 
     <link href="~/Public/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Public/css/mdb.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
-    <link href="~/Public/css/toast/toastr.css" rel="stylesheet" />
-    <link href="~/Public/css/style.css" rel="stylesheet" />
+    <link href="~/Public/css/toast/toastr.css" rel="stylesheet" runat="server" />
+    <link href="~/Public/css/style.css" rel="stylesheet" runat="server" media="screen" />
 
-    <script src="<%= ResolveUrl("~/Public/js/jquery.js") %>""></script>
-    <script src="<%= ResolveUrl("~/Public/js/toast/toastr.js") %>""></script>
+    <script src="<%= ResolveUrl("~/Public/js/jquery.js") %>"></script>
+    <script src="<%= ResolveUrl("~/Public/js/toast/toastr.js")%>"></script>
 
     <script type="text/javascript">
         function toastnotif(msg, title, type) {
@@ -41,105 +41,107 @@
 </head>
 
 <body>
-     <form runat="server">
-    <asp:Label runat="server" ID="Lbemail" Visible="false"></asp:Label>
+    <form runat="server">
+        <asp:Label runat="server" ID="Lbemail" Visible="false"></asp:Label>
 
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-md navbar-dark z-depth-0 primary-color sticky-top scrolling-navbar" style="padding-left: 12px 1rem !important;">
+        <!--Navbar-->
+        <nav class="navbar navbar-expand-md navbar-dark z-depth-0 primary-color sticky-top scrolling-navbar" style="padding-left: 12px 1rem !important;">
 
-        <!-- Navbar brand -->
-        <a class="navbar-brand" href="<%= Page.ResolveUrl("~/Views/index.aspx") %>">WISELY</a>
+            <!-- Navbar brand -->
+            <a class="navbar-brand" href="<%= Page.ResolveUrl("~/Views/index.aspx") %>">WISELY</a>
 
-        <!-- Collapse button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-            <i class="fas fa-bars"></i>
-        </button>
+            <!-- Collapse button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+                <i class="fas fa-bars"></i>
+            </button>
 
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link rounded" href="<%= Page.ResolveUrl("~/Views/index.aspx") %>">Home</a>
-                </li>
-                <%if (user() != null)
-                    { %>
-                <li class="nav-item">
-                    <a class="nav-link rounded" href="<%= Page.ResolveUrl("~/Views/Gacha/gacha.aspx") %>">Gachas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link rounded" href="<%= Page.ResolveUrl("~/Views/Quiztool/quizzes.aspx") %>">Quizzes</a>
-                </li>
-                <%} %>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <%if (user() != null)
-                    { %>
-                <li class="nav-item mr-2 mt-3">
-                    <p class="white-text"><%=user().points %> WIS</p>
-                </li>
-                <li class="nav-item mr-2 mt-2 d-none d-md-block">
-                    <a class="nav-link rounded" href="<%=Page.ResolveUrl("~/Views/Notification/viewnotif.aspx") %>">
-                        <i class="fas fa-bell"></i><span><%=notifnum() %></span></a>
-                </li>
-                <li class="nav-item dropdown my-auto d-none d-md-block">
-                    <a class="nav-link dropdown-toggle m-0 z-depth-1-half" id="profileDD" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
-                        <img class="deep-purple lighten-5 z-depth-0 rounded-circle" height="35" src='<%=user().profilesrc %>' onerror="this.src='<%=Page.ResolveUrl("~/Public/img/default.jpg") %>'">
-                        <i class="fas fa-user animated faster"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-primary dropdown-menu-right mt-1" aria-labelledby="profileDD">
-                        <a class="dropdown-item" href="<%= Page.ResolveUrl("~/Views/Profile/profile.aspx") %>">
-                            <i class="fas fa-id-card mr-1"></i>My Profile</a>
-                        <a class="dropdown-item" href="<%= Page.ResolveUrl("~/Views/Board/collab.aspx") %>">
-                            <i class="fas fa-users mr-1"></i>My Groups</a>
-                        <a class="dropdown-item" href="<%= Page.ResolveUrl("~/Views/Schedule/schedule.aspx") %>">
-                            <i class="fas fa-calendar mr-1"></i>My Schedule</a>
-                        <hr class="mt-0 mb-3" />
-                        <a class="dropdown-item text-danger" href="<%= Page.ResolveUrl("~/Views/Auth/logout.aspx") %>">
-                            <i class="fas fa-power-off mr-1"></i>Sign Out
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link rounded" href="<%= Page.ResolveUrl("~/Views/index.aspx") %>">Home</a>
+                    </li>
+                    <%if (user() != null)
+                        { %>
+                    <li class="nav-item">
+                        <a class="nav-link rounded" href="<%= Page.ResolveUrl("~/Views/Gacha/gacha.aspx") %>">Gachas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link rounded" href="<%= Page.ResolveUrl("~/Views/Quiztool/quizzes.aspx") %>">Quizzes</a>
+                    </li>
+                    <%} %>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <%if (user() != null)
+                        { %>
+                    <li class="nav-item mr-2 mt-3">
+                        <p class="white-text"><%=user().points %> WIS</p>
+                    </li>
+                    <li class="nav-item mr-2 mt-2 d-none d-md-block">
+                        <a class="nav-link rounded" href="<%=Page.ResolveUrl("~/Views/Notification/viewnotif.aspx") %>">
+                            <i class="fas fa-bell"></i><span><%=notifnum() %></span></a>
+                    </li>
+                    <li class="nav-item dropdown my-auto d-none d-md-block">
+                        <a class="nav-link dropdown-toggle m-0 z-depth-1-half" id="profileDD" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            <img class="deep-purple lighten-5 z-depth-0 rounded-circle" height="35" src='<%=user().profilesrc %>' onerror="this.src='<%=Page.ResolveUrl("~/Public/img/default.jpg") %>'">
+                            <i class="fas fa-user animated faster"></i>
                         </a>
-                    </div>
-                </li>
-                <%} %>
-                <%else
-                    { %>
-                <li class="nav-item">
-					<hr class="hr-light d-md-none mt-3 mb-4">
-					<a class="btn btn-md btn-block dusty-grass-gradient black-text" href="<%=Page.ResolveUrl("~/Views/Auth/register.aspx") %>">
-						<i class="fas fa-user-plus mr-1"></i> Join
-					</a>
-				</li>
-                <li class="nav-item">
-					<a class="btn btn-md btn-info d-none d-md-block m-0 ml-3" href="<%=Page.ResolveUrl("~/Views/Auth/login.aspx") %>">
-						<i class="fas fa-sign-in-alt mr-1"></i> Sign In
-					</a>
-                </li>
+                        <div class="dropdown-menu dropdown-primary dropdown-menu-right mt-1" aria-labelledby="profileDD">
+                            <a class="dropdown-item" href="<%= Page.ResolveUrl("~/Views/Profile/profile.aspx") %>">
+                                <i class="fas fa-id-card mr-1"></i>My Profile</a>
+                            <a class="dropdown-item" href="<%= Page.ResolveUrl("~/Views/Board/collab.aspx") %>">
+                                <i class="fas fa-users mr-1"></i>My Groups</a>
+                            <a class="dropdown-item" href="<%= Page.ResolveUrl("~/Views/Schedule/schedule.aspx") %>">
+                                <i class="fas fa-calendar mr-1"></i>My Schedule</a>
+                            <hr class="mt-0 mb-3" />
+                            <a class="dropdown-item text-danger" href="<%= Page.ResolveUrl("~/Views/Auth/logout.aspx") %>">
+                                <i class="fas fa-power-off mr-1"></i>Sign Out
+                            </a>
+                        </div>
+                    </li>
+                    <%} %>
+                    <%else
+                        { %>
+                    <li class="nav-item">
+                        <hr class="hr-light d-md-none mt-3 mb-4">
+                        <a class="btn btn-md btn-block dusty-grass-gradient black-text" href="<%=Page.ResolveUrl("~/Views/Auth/register.aspx") %>">
+                            <i class="fas fa-user-plus mr-1"></i>Join
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-md btn-info d-none d-md-block m-0 ml-3" href="<%=Page.ResolveUrl("~/Views/Auth/login.aspx") %>">
+                            <i class="fas fa-sign-in-alt mr-1"></i>Sign In
+                        </a>
+                    </li>
 
-                <%} %>
-            </ul>
-        </div>
-    </nav>
-    <!--/.Navbar-->
-       
-    <main class="container-fluid mx-auto mt-4 min-vh-85">
-        <asp:ContentPlaceHolder ID="contentHolder1" runat="server">
-        </asp:ContentPlaceHolder>
-    </main>
+                    <%} %>
+                </ul>
+            </div>
+        </nav>
+        <!--/.Navbar-->
 
-    <footer class="page-footer font-small mt-4 blue">
-        <div class="footer-copyright p-3">
-            <a href="<%= Page.ResolveUrl("~/Views/index.aspx") %>">
-<%--                <img src="<%= Page.ResolveUrl("~/Public/img/Logo/WISELY30.jpg") %>" height="30" alt="WISELY">--%>
-            </a>
-            <span class="m-0">&copy; <%=DateTime.Now.Year.ToString() %> <a href="<%= Page.ResolveUrl("~/Views/index.aspx") %>">WISELY</a> All Rights Reserved
-            </span>
-        </div>
-    </footer>
-            </form>
+        <main class="container-fluid mx-auto mt-4 min-vh-85">
+            <asp:ContentPlaceHolder ID="contentHolder1" runat="server">
+            </asp:ContentPlaceHolder>
+        </main>
 
+        <footer class="page-footer font-small mt-4 blue">
+            <div class="footer-copyright p-3">
+                <a href="<%= Page.ResolveUrl("~/Views/index.aspx") %>">
+                    <%--                <img src="<%= Page.ResolveUrl("~/Public/img/Logo/WISELY30.jpg") %>" height="30" alt="WISELY">--%>
+                </a>
+                <span class="m-0">&copy; <%=DateTime.Now.Year.ToString() %> <a href="<%= Page.ResolveUrl("~/Views/index.aspx") %>">WISELY</a> All Rights Reserved
+                </span>
+            </div>
+        </footer>
+    </form>
+
+    <script src="<%= ResolveUrl("~/Public/js/jquery.js") %>"></script>
     <script src="<%= ResolveUrl("~/Public/js/popper.min.js") %>"></script>
     <script src="<%= ResolveUrl("~/Public/js/bootstrap.min.js") %>"></script>
     <script src="<%= ResolveUrl("~/Public/js/mdb.min.js") %>"></script>
-
+    <asp:ContentPlaceHolder ID="scripts" runat="server">
+    </asp:ContentPlaceHolder>
 </body>
 
 </html>
