--- a/WISLEY/Views/Masters/sidebar.master
+++ b/WISLEY/Views/Masters/sidebar.master
@@ -7,7 +7,7 @@
 <asp:Content ID="Content3" ContentPlaceHolderID="contentHolder1" runat="server">
 
     <div class="row justify-content-around" runat="server">
-        <div class="col-lg-3 col-md-5">
+        <div class="col-lg-3 col-md-5 sticky">
 
             <div class="card card-body mb-4">
                 <div class="row justify-content-center">
@@ -31,30 +31,26 @@
 
 
                 <div class="col-12">
+
                     <h4 class="text-center mx-auto">Groups</h4>
-                    <hr class="hr-primary">
+                    <hr class="hr-primary mb-0">
 
-
-                    <div class="min-vh-30 max-vh-30 overflow-auto row justify-content-center">
+                    <div class="vh-30 overflow-auto mt-0">
                         <asp:Repeater
-                            runat="server" ID="groupBtns" DataSourceID="groupData"
+                            runat="server" ID="groupBtns"
                             OnItemCommand="groupItemCommand">
                             <ItemTemplate>
                                 <asp:LinkButton ID="groupRedirect" runat="server" Text='<%#Eval("name")%>' CommandName="redirectToGroup" CommandArgument='<%#Eval("Id") %>'
-                                    class="btn btn-block btn-white text-left border-left border-danger rounded-0 mb-1" Style="text-transform: unset;" />
+                                    class="btn btn-block btn-white text-left border border-primary rounded-0 mb-1" Style="text-transform: unset;" />
                             </ItemTemplate>
 
                             <FooterTemplate>
+                                <% if (groupBtns.Items.Count == 0)
+                                    { %>
+                                <div class="row col-12 justify-content-center align-content-start">
 
-                                <%--                                <asp:Label ID="defaultItem" runat="server"
-                                    Visible='<%# groupBtns.Items.Count == 0 %>' Text="You have not joined any groups. Join one now!" class="text-center"/>--%>
-                                <div class="row col-12 justify-content-center align-content-start <% if (groupBtns.Items.Count == 0)
-                                    { %> visible <%}
-                                    else
-                                    { %> invisible <%} %>">
                                     <h6 class="text-center col-12 pb-2">You are not inside any groups.
                                     </h6>
-                                    
 
                                     <div class="col-12 row justify-content-center">
                                         <a id="noGroupJoinBtn" class="btn btn-white text-left col-10 rounded-0 text-center "
@@ -68,20 +64,12 @@
                                         <% } %>
                                     </div>
                                 </div>
+                                <%} %>
                             </FooterTemplate>
                         </asp:Repeater>
                     </div>
 
-                    <asp:SqlDataSource ID="groupData"
-                        ConnectionString="<%$ connectionStrings: ConnStr%>"
-                        runat="server"/>
-
-
-
-
-
-
-                    <hr class="hr-primary" />
+                    <hr class="hr-primary mt-0" />
                 </div>
 
 
@@ -89,13 +77,11 @@
 
 
 
-
-
+                <% if (groupBtns.Items.Count != 0)
+                    { %>
                 <div class="col-12 row justify-content-center m-0 p-0">
-                   
-                    <% if (groupBtns.Items.Count != 0)
-                        { %>
-<%--                     <div class="btn-group btn-group-sm col-12 p-0">--%>
+
+
                     <a id="showAllGroupsBtn" class="btn btn-block btn-white text-left rounded-0 mb-1 text-center" href="<%= Page.ResolveUrl("~/Views/Group/viewAllGroups.aspx") %>">View All </a>
 
 
@@ -106,10 +92,8 @@
                     <a id="createGroupBtn" class="btn btn-block btn-success text-left rounded-0 mb-1 text-center"
                         href="<%= Page.ResolveUrl("~/Views/Group/createGroup.aspx") %>">Create Group </a>
                     <% } %>
-<%--                         </div>--%>
-                    <%} %>
-                        
                 </div>
+                <%} %>
             </div>
 
         </div>
@@ -164,16 +148,30 @@
     </div>
 
 
+    <footer id="footer" class="grey lighten-4">
+        <p class="stopper-text">Stop here</p>
+    </footer>
 
 
 
-    <script type="text/javascript">
-        <% string username = user().name; %>
-        username = '<%= username %>'
-        $('#LbUsername').text(username);
-    </script>
 
 </asp:Content>
 
 
 
+<asp:Content ID="Sctipt1" ContentPlaceHolderID="scripts" runat="server">
+        <script type="text/javascript">
+        <% string username = user().name; %>
+        username = '<%= username %>'
+        $('#LbUsername').text(username);
+
+        $(function () {
+            console.log("Sticky test")
+            $(".sticky").sticky({
+                topSpacing: 90,
+                zIndex: 2,
+                stopper: "#footer",
+            });
+        });
+    </script>
+</asp:Content>
