--- a/WISLEY/Public/css/planner.css
+++ b/WISLEY/Public/css/planner.css
@@ -2,7 +2,7 @@
     text-align: center;
 }
 
-.switch {
+/*.switch {
     position: relative;
     display: inline-block;
     width: 60px;
@@ -49,4 +49,4 @@ input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
-}
+}*/
