Some UI updates

--- a/WISLEY/Views/Masters/sidebar.master
+++ b/WISLEY/Views/Masters/sidebar.master
@@ -7,95 +7,97 @@
 <asp:Content ID="Content3" ContentPlaceHolderID="contentHolder1" runat="server">
 
     <div class="row justify-content-around" runat="server">
-        <div class="col-lg-3 col-md-5 sticky">
+        <div class="col-lg-3 col-md-5">
+            <div class="position-fixed col-lg-3 col-md-5 row">
+                <div class="card card-body border border-primary mb-4">
+                    <div class="row justify-content-center">
+                        <div class="col-4">
+                            <img src='<%=user().profilesrc %>' onerror="this.src='<%=Page.ResolveUrl("~/Public/img/default.jpg") %>'" class="mx-auto md-block w-100 h-100">
+                            <!-- Social shares button -->
+                        </div>
 
-            <div class="card card-body mb-4">
-                <div class="row justify-content-center">
-                    <div class="col-4">
-                        <img src='<%=user().profilesrc %>' onerror="this.src='<%=Page.ResolveUrl("~/Public/img/default.jpg") %>'" class="mx-auto md-block w-100 h-100">
-                        <!-- Social shares button -->
-                    </div>
-
-                    <div class="col-8">
-                        <h5 class="text-center">Name: 
+                        <div class="col-8">
+                            <h5 class="text-center">Name: 
                             <span id="LbUsername"></span>
-                        </h5>
-                        <p class="text-center" id="level">Level: 1</p>
-                        <p class="text-center" id="badges">Badges: Weee</p>
+                            </h5>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="card card-body">
-
+                <div class="card card-body border border-primary py-3">
 
 
-                <div class="col-12">
 
-                    <h4 class="text-center mx-auto">Groups</h4>
-                    <hr class="hr-primary mb-0">
+                    <div class="">
 
-                    <div class="vh-30 overflow-auto mt-0">
-                        <asp:Repeater
-                            runat="server" ID="groupBtns"
-                            OnItemCommand="groupItemCommand">
-                            <ItemTemplate>
-                                <asp:LinkButton ID="groupRedirect" runat="server" Text='<%#Eval("name")%>' CommandName="redirectToGroup" CommandArgument='<%#Eval("Id") %>'
-                                    class="btn btn-block btn-white text-left border border-primary rounded-0 mb-1" Style="text-transform: unset;" />
-                            </ItemTemplate>
+                        <h4 class="text-center mx-auto">Groups</h4>
+                        <hr class="hr-primary mb-0">
 
-                            <FooterTemplate>
-                                <% if (groupBtns.Items.Count == 0)
+                        <div class="vh-30 overflow-auto mt-0">
+                            <asp:Repeater
+                                runat="server" ID="groupBtns"
+                                OnItemCommand="groupItemCommand">
+                                <ItemTemplate>
+
+                                    <asp:LinkButton ID="groupRedirect" runat="server" Text='<%#Eval("name")%>' CommandName="redirectToGroup" CommandArgument='<%#Eval("Id") %>'
+                                        class="btn btn-block btn-white text-left border border-primary rounded-0 mb-1" Style="text-transform: unset;" 
+                                        visible='<%# (Eval("show").ToString() == "1") %>'/>
+                     
+                                </ItemTemplate>
+
+                                <FooterTemplate>
+                                    <% if (groupBtns.Items.Count == 0)
                                     { %>
-                                <div class="row col-12 justify-content-center align-content-start">
+                                    <div class="row col-12 justify-content-center align-content-start">
 
-                                    <h6 class="text-center col-12 pb-2">You are not inside any groups.
-                                    </h6>
+                                        <h6 class="text-center col-12 pb-2">You are not inside any groups.
+                                        </h6>
 
-                                    <div class="col-12 row justify-content-center">
-                                        <a id="noGroupJoinBtn" class="btn btn-white text-left col-10 rounded-0 text-center "
-                                            href="<%= Page.ResolveUrl("~/Views/Group/joinGroup.aspx") %>"><i class="fas fa-plus"></i>&nbsp;&nbsp;  Join a Group </a>
-                                        <% if (TeacherCheck())
+                                        <div class="col-12 row justify-content-center">
+                                            <a id="noGroupJoinBtn" class="btn btn-white text-left col-10 rounded-0 text-center "
+                                                href="<%= Page.ResolveUrl("~/Views/Group/joinGroup.aspx") %>"><i class="fas fa-plus"></i>&nbsp;&nbsp;  Join a Group </a>
+                                            <% if (TeacherCheck())
                                             {
-                                        %>
-                                        <h5 class="text-center col-12 m-0 py-2">or</h5>
-                                        <a id="noGroupCreateBtn" class="btn btn-success text-left col-10 rounded-0 text-center "
-                                            href="<%= Page.ResolveUrl("~/Views/Group/createGroup.aspx") %>"><i class="fas fa-plus"></i>&nbsp;&nbsp;  Create a Group</a>
-                                        <% } %>
+                                            %>
+                                            <h5 class="text-center col-12 m-0 py-2">or</h5>
+                                            <a id="noGroupCreateBtn" class="btn btn-success text-left col-10 rounded-0 text-center "
+                                                href="<%= Page.ResolveUrl("~/Views/Group/createGroup.aspx") %>"><i class="fas fa-plus"></i>&nbsp;&nbsp;  Create a Group</a>
+                                            <% } %>
+                                        </div>
                                     </div>
-                                </div>
-                                <%} %>
-                            </FooterTemplate>
-                        </asp:Repeater>
+                                    <%} %>
+                                </FooterTemplate>
+                            </asp:Repeater>
+                        </div>
+
+                        <hr class="hr-primary mt-0" />
                     </div>
 
-                    <hr class="hr-primary mt-0" />
-                </div>
 
 
 
 
 
-
-                <% if (groupBtns.Items.Count != 0)
+                    <% if (groupBtns.Items.Count != 0)
                     { %>
-                <div class="col-12 row justify-content-center m-0 p-0">
+                    <div class="row justify-content-center m-0 p-0">
+
+                        <div class="btn-group btn-block">
+                        <a id="showAllGroupsBtn" class="btn btn-sm btn-block btn-primary text-left rounded-0 mb-1 text-center z-depth-0" href="<%= Page.ResolveUrl("~/Views/Group/viewAllGroups.aspx") %>">View All </a>
 
 
-                    <a id="showAllGroupsBtn" class="btn btn-block btn-white text-left rounded-0 mb-1 text-center" href="<%= Page.ResolveUrl("~/Views/Group/viewAllGroups.aspx") %>">View All </a>
-
-
-                    <a id="joinGroupBtn" class="btn btn-block btn-white text-left rounded-0 mb-1 text-center" href="<%= Page.ResolveUrl("~/Views/Group/joinGroup.aspx") %>">Join Group </a>
-                    <% if (TeacherCheck())
+                        <a id="joinGroupBtn" class="btn btn-sm  btn-block btn-primary text-left rounded-0 mb-1 text-center z-depth-0" href="<%= Page.ResolveUrl("~/Views/Group/joinGroup.aspx") %>">Join Group </a>
+                            </div>
+                        <% if (TeacherCheck())
                         {
-                    %>
-                    <a id="createGroupBtn" class="btn btn-block btn-success text-left rounded-0 mb-1 text-center"
-                        href="<%= Page.ResolveUrl("~/Views/Group/createGroup.aspx") %>">Create Group </a>
-                    <% } %>
+                        %>
+                        <a id="createGroupBtn" class="btn btn-sm btn-block btn-success text-left rounded-0 mb-1 text-center"
+                            href="<%= Page.ResolveUrl("~/Views/Group/createGroup.aspx") %>">Create Group </a>
+                        <% } %>
+                    </div>
+                    <%} %>
                 </div>
-                <%} %>
             </div>
-
         </div>
 
         <div class="col-lg-6 col-md-7 p-0">
@@ -104,53 +106,50 @@
         </div>
 
         <div class="col-lg-3 d-lg-block d-md-none">
-            <div class="card card-body mb-4">
-                <div class="row justify-content-center">
-                    <h1 class="col-12 text-center"> Schedule</h1>
-                    <div class="col-12">
-                        <!-- Social shares button -->
-                        <asp:Repeater ID="scheduleitems" runat="server" OnItemCommand="scheduleRepeater_ItemCommand" OnItemDataBound="scheduleRepeater_ItemDataBound">
-                            <ItemTemplate>
-                                <div class="card scheduleCards">
-                                    <div class="card-body">
-                                        <p class="card-title font-weight-bold scheduleTitle mb-2"><%#Eval("todoTitle") %></p>
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <span class="text-muted"><i class="fas fa-clock mr-1"></i><%#Eval("todoDate") %></span>
-                                                <hr />
-                                            </div>
-                                            
-                                            <div class="col-lg-12">
-                                                <p class="card-text"><%#Eval("todoDescription") %></p>
-                                            </div>
-                                        </div>
+            <div class="position-fixed col-3 row">
+                <div class="card card-body mb-4">
+                    <div class="row justify-content-center">
+                        <h1 class="col-12 text-center">Schedule</h1>
+                        <div class="col-12">
+                            <!-- Social shares button -->
+                            <asp:Repeater ID="scheduleitems" runat="server" OnItemCommand="scheduleRepeater_ItemCommand" OnItemDataBound="scheduleRepeater_ItemDataBound">
+                                <ItemTemplate>
+                                    <div class="card scheduleCards">
+                                        <div class="card-body">
+                                            <p class="card-title font-weight-bold scheduleTitle mb-2"><%#Eval("todoTitle") %></p>
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <span class="text-muted"><i class="fas fa-clock mr-1"></i><%#Eval("todoDate") %></span>
+                                                    <hr />
+                                                </div>
 
-                                        <div class="text-center">
-                                            <asp:LinkButton runat="server" ID="btnEdit" CssClass="btn btn-info btn-sm" Text="Edit" CommandName="edit" CommandArgument='<%#Eval("Id") %>'></asp:LinkButton>
+                                                <div class="col-lg-12">
+                                                    <p class="card-text"><%#Eval("todoDescription") %></p>
+                                                </div>
+                                            </div>
+
+                                            <div class="text-center">
+                                                <asp:LinkButton runat="server" ID="btnEdit" CssClass="btn btn-info btn-sm" Text="Edit" CommandName="edit" CommandArgument='<%#Eval("Id") %>'></asp:LinkButton>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            </ItemTemplate>
-                            <FooterTemplate>
-                                <div class="text-center mb-4">
-                                    <h4>
-                                        <asp:Label runat="server" ID="LblMsg" Text="No Plans at the moment" CssClass="font-weight-bold" Visible="false"></asp:Label>
-                                    </h4>
-                                </div>
-                            </FooterTemplate>
-                        </asp:Repeater>
+                                </ItemTemplate>
+                                <FooterTemplate>
+                                    <div class="text-center mb-4">
+                                        <h4>
+                                            <asp:Label runat="server" ID="LblMsg" Text="No Plans at the moment" CssClass="font-weight-bold" Visible="false"></asp:Label>
+                                        </h4>
+                                    </div>
+                                </FooterTemplate>
+                            </asp:Repeater>
+                        </div>
+
+
                     </div>
-
-
                 </div>
             </div>
         </div>
     </div>
-
-
-    <footer id="footer" class="grey lighten-4">
-        <p class="stopper-text">Stop here</p>
-    </footer>
 
 
 
@@ -160,18 +159,10 @@
 
 
 <asp:Content ID="Sctipt1" ContentPlaceHolderID="scripts" runat="server">
-        <script type="text/javascript">
+    <script type="text/javascript">
         <% string username = user().name; %>
         username = '<%= username %>'
         $('#LbUsername').text(username);
 
-        $(function () {
-            console.log("Sticky test")
-            $(".sticky").sticky({
-                topSpacing: 90,
-                zIndex: 2,
-                stopper: "#footer",
-            });
-        });
     </script>
 </asp:Content>
